syntax = "proto3";

option java_package = "com.poc.apistyles.adapter.grpc.protobuf";
option java_multiple_files = true;

package com.poc.apistyles.grpc;

service ProductService {
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc UpdateStock(UpdateStockRequest) returns (ProductResponse);
    rpc ImportProducts(stream ImportProductsRequest) returns (ImportProductsResponse);
}

message GetProductRequest {
    string id = 1;
}

message CreateProductRequest {
    string name = 1;
    double price = 2;
    int32 stock = 3;
    string category = 4;
}

message ListProductsRequest {
    int32 page = 1;
    int32 size = 2;
    string category = 3;
}

message UpdateStockRequest {
    string id = 1;
    int32 quantity = 2;
}

message ImportProductsRequest {
    repeated ProductRequest products = 1;
}

message ProductRequest {
    string name = 1;
    double price = 2;
    int32 stock = 3;
    string category = 4;
}

message ImportProductsResponse {
    int32 imported = 1;
    repeated ProductResponse products = 2;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
    string category = 5;
    string created_at = 6;
    string updated_at = 7;
}

message ListProductsResponse {
    repeated ProductResponse products = 1;
    int32 total = 2;
}
